force-app/main/default/objects/Charket__WeChatFollower__c/Charket__WeChatFollower__c.object-meta.xml
<CustomObject>
    <label>WeChat Follower</label>
    <nameField>
        <label>Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Followers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>