force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__Contact__c.field-meta.xml
<CustomField>
    <fullName>Charket__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WeChat Followers</relationshipLabel>
    <relationshipName>WeChatFollowers</relationshipName>
    <type>Lookup</type>
</CustomField>