force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__Country__c.field-meta.xml
<CustomField>
    <fullName>Charket__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>