force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>Charket__DisplayName__c</fullName>
    <description>Used to flexible Name and Alias__c order by</description>
    <formula>IF(
            Charket__Alias__c != null,
            Charket__Alias__c,
            IF(Charket__Contact__c != null,
                IF(Charket__Contact__r.FirstName != null,
                    IF(OR(contains(&apos;abcdefghijklmnopqrstuvwxyz&apos;, left(LOWER(Charket__Contact__r.LastName), 1)), contains(&apos;abcdefghijklmnopqrstuvwxyz&apos;, left(LOWER(Charket__Contact__r.FirstName), 1))),
                        Charket__Contact__r.FirstName + &apos; &apos; + Charket__Contact__r.LastName,
                        Charket__Contact__r.LastName + Charket__Contact__r.FirstName
                    ),
                    Charket__Contact__r.LastName
                ),
                IF(Charket__Lead__c != null,
                    IF(Charket__Lead__r.FirstName != null,
                        IF(OR(contains(&apos;abcdefghijklmnopqrstuvwxyz&apos;, left(LOWER(Charket__Lead__r.LastName), 1)), contains(&apos;abcdefghijklmnopqrstuvwxyz&apos;, left(LOWER(Charket__Lead__r.FirstName), 1))),
                            Charket__Lead__r.FirstName + &apos; &apos; + Charket__Lead__r.LastName,
                            Charket__Lead__r.LastName + Charket__Lead__r.FirstName
                        ),
                        Charket__Lead__r.LastName
                    ),
                    Name
                )
            )
        )</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>