force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__EventCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__EventCount__c</fullName>
    <label>Event Count</label>
    <summarizedField>Charket__WeChatTranscript__c.Charket__FollowerEventCount__c</summarizedField>
    <summaryForeignKey>Charket__WeChatTranscript__c.Charket__WeChatFollower__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>