force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__FollowerSource__c.field-meta.xml
<CustomField>
    <fullName>Charket__FollowerSource__c</fullName>
    <label>Follower Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Migration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Profile Card Sharing</fullName>
            </value>
            <value>
                <fullName>QR Code Scanning</fullName>
            </value>
            <value>
                <fullName>WeChat Article - Link</fullName>
            </value>
            <value>
                <fullName>WeChat Article - Menu</fullName>
            </value>
            <value>
                <fullName>WeChat Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>