force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__IndexedUnionId__c.field-meta.xml
<CustomField>
    <fullName>Charket__IndexedUnionId__c</fullName>
    <externalId>true</externalId>
    <label>Union ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>