force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__IsFollowing__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsFollowing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Following</label>
    <type>Checkbox</type>
</CustomField>