force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>Charket__LastSyncDate__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>