force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__Lead__c.field-meta.xml
<CustomField>
    <fullName>Charket__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>WeChat Followers</relationshipLabel>
    <relationshipName>WeChatFollowers</relationshipName>
    <type>Lookup</type>
</CustomField>