force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__MessageCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__MessageCount__c</fullName>
    <label>Message Count</label>
    <summarizedField>Charket__WeChatTranscript__c.Charket__FollowerMessageCount__c</summarizedField>
    <summaryForeignKey>Charket__WeChatTranscript__c.Charket__WeChatFollower__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>