force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__OpenId__c.field-meta.xml
<CustomField>
    <fullName>Charket__OpenId__c</fullName>
    <externalId>true</externalId>
    <label>Open ID</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>