force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__ProfilePhoto__c.field-meta.xml
<CustomField>
    <fullName>Charket__ProfilePhoto__c</fullName>
    <formula>IF(NOT(ISBLANK(Charket__WeChatProfilePhotoUrl__c)), IMAGE( IF( BEGINS(Charket__WeChatProfilePhotoUrl__c, &apos;https&apos;) , Charket__WeChatProfilePhotoUrl__c ,&apos;https&apos; +  RIGHT(Charket__WeChatProfilePhotoUrl__c,  LEN(Charket__WeChatProfilePhotoUrl__c) - 4 ) ) , &apos;No Attachment&apos;, 100, 100), &apos;&apos;)</formula>
    <label>Profile Photo</label>
    <type>Text</type>
</CustomField>