force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__Type__c.field-meta.xml
<CustomField>
    <fullName>Charket__Type__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Charket__Contact__c)),
  &apos;Contact&apos;,
  IF(NOT(ISBLANK(Charket__Lead__c)),
     &apos;Lead&apos;,
     &apos;Follower&apos;
  )
)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>