force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__UnduplicatedCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__UnduplicatedCount__c</fullName>
    <description>Only use for counting the Grouping Rows in a report</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unduplicated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>