force-app/main/default/objects/Charket__WeChatFollower__c/fields/Charket__WeChatProfilePhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatProfilePhotoUrl__c</fullName>
    <label>WeChat Profile Photo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>