force-app/main/default/objects/Charket__WeChatFollower__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Field to display the company name.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>