force-app/main/default/objects/Charket__WeChatFollower__c/fields/DataPrivacyPolicyConsentDate__c.field-meta.xml
<CustomField>
    <fullName>DataPrivacyPolicyConsentDate__c</fullName>
    <description>Date when WeChat Follower consents to data privacy policy in WeChat. Populated via Charket.</description>
    <label>Data Privacy Policy Consent Date</label>
    <type>DateTime</type>
</CustomField>