force-app/main/default/objects/Charket__WeChatFollower__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Field to store email address.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>