force-app/main/default/objects/Charket__WeChatFollower__c/fields/EmailNotifiedTime__c.field-meta.xml
<CustomField>
    <fullName>EmailNotifiedTime__c</fullName>
    <description>Field to display the date and time when the notification was sent via email.</description>
    <label>Email Notified Time</label>
    <type>DateTime</type>
</CustomField>