force-app/main/default/objects/Charket__WeChatFollower__c/fields/EmailVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>EmailVerificationCode__c</fullName>
    <description>Field to enter the verification code recieved via email.</description>
    <label>Email Verification Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>