force-app/main/default/objects/Charket__WeChatFollower__c/fields/IsContactVerified__c.field-meta.xml
<CustomField>
    <fullName>IsContactVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Verified</label>
    <type>Checkbox</type>
</CustomField>