force-app/main/default/objects/Charket__WeChatFollower__c/fields/IsEmailVerified__c.field-meta.xml
<CustomField>
    <fullName>IsEmailVerified__c</fullName>
    <description>Checkbox to check whether the email id is verified or not.</description>
    <defaultValue>false</defaultValue>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>