force-app/main/default/objects/Charket__WeChatFollower__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Field to store Last Name.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>