force-app/main/default/objects/Charket__WeChatFollower__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Field to store Phone Number.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>