force-app/main/default/objects/Charket__WeChatFollower__c/fields/PreferredContactMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactMethod__c</fullName>
    <description>Field to store Preferrred Contact Method</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>电话</fullName>
            </value>
            <value>
                <fullName>邮件</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>