force-app/main/default/objects/Charket__WeChatFollower__c/fields/ProductSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductSerialNumber__c</fullName>
    <description>Field to store Serial Number of the product.</description>
    <label>Product Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>